cmake_minimum_required(VERSION 3.12)
project(All_ultimo_gas)
set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_NAME All_ultimo_gas)
add_executable(All_ultimo_gas CMakeLists.txt main.cpp Menu.cpp Menu.h Race.cpp Race.h Control.cpp Control.h Error.cpp Error.h Setting.h Setting.cpp Single_Race.h Single_Race.cpp Time_Trial.h Time_Trial.cpp Car.cpp Car.h Weather.cpp Weather.h Circuit.cpp Circuit.h Championship.cpp Championship.h Cars_Cpu.cpp Cars_Cpu.h Traffic_Light.cpp Traffic_Light.h Song.cpp Song.h)
set(CMAKE_MODULE_PATH "/usr/share/SFML/cmake/Modules/" ${CMAKE_MODULE_PATH})
find_package(SFML 2 COMPONENTS system network graphics window audio REQUIRED)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(All_ultimo_gas ${SFML_LIBRARIES})
endif ()