cmake_minimum_required(VERSION 3.12)
project(All_ultimo_gas)
set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_NAME All_ultimo_gas)
add_executable(All_ultimo_gas CMakeLists.txt main.cpp Menu.cpp Menu.h Race.cpp Race.h Control.cpp Control.h Error.cpp Error.h Setting.h Setting.cpp Single_Race.h Single_Race.cpp Time_Trial.h Time_Trial.cpp Car.cpp Car.h Weather.cpp Weather.h Circuit.cpp Circuit.h Championship.cpp Championship.h Cars_Cpu.cpp Cars_Cpu.h Traffic_Light.cpp Traffic_Light.h Song.cpp Song.h Menu_State.cpp Menu_State.h Menu_Game.cpp Menu_Game.h Championship_Page.cpp Championship_Page.h SingleRace_Page.cpp SingleRace_Page.h SingleRace_Page2.cpp SingleRace_Page2.h Load_Page.cpp Load_Page.h TimeTrial_Page.cpp TimeTrial_Page.h Setting_Page.cpp Setting_Page.h State_Option.cpp State_Option.h Menu_Loop.cpp Menu_Loop.h LoadMenu_Page.cpp LoadMenu_Page.h Race_Page.cpp Race_Page.h fsa.h stlastar.h Control_Cpu.cpp Control_Cpu.h A_Star.cpp A_Star.h)
set(CMAKE_MODULE_PATH "/usr/share/SFML/cmake/Modules/" ${CMAKE_MODULE_PATH})
find_package(SFML 2 COMPONENTS system network graphics window audio REQUIRED)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(All_ultimo_gas ${SFML_LIBRARIES})
endif ()